--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>SPA Center - Beauty & Spa HTML Template</title>
+    <title>Massoterapia - Will Fisio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -33,9 +33,9 @@
         <div class="row py-2 px-lg-5">
             <div class="col-lg-6 text-left mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center">
-                    <small><i class="fa fa-phone-alt mr-2"></i>+012 345 6789</small>
+                    <small><i class="fa fa-phone-alt mr-2"></i>+11 974237159</small>
                     <small class="px-3">|</small>
-                    <small><i class="fa fa-envelope mr-2"></i>info@example.com</small>
+                    <small><i class="fa fa-envelope mr-2"></i>williamotavio@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-6 text-right">
@@ -108,7 +108,7 @@
                     <img class="position-absolute w-100 h-100" src="img/Massage-Dark.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa & Beauty Center</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massagem Sueca (Clássica)</h3>
                             <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
@@ -119,7 +119,7 @@
                     <img class="position-absolute w-100 h-100" src="img/carousel-2.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa & Beauty Center</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massage Relaxante</h3>
                             <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
@@ -130,7 +130,7 @@
                     <img class="position-absolute w-100 h-100" src="img/carousel-3.jpg" style="object-fit: cover;">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
-                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Spa & Beauty Center</h6>
+                            <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Drenagem Linfática</h3>
                             <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
                             <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
@@ -151,20 +151,20 @@
                     <img class="img-fluid w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Us</h6>
-                    <h1 class="mb-4">Your Best Spa, Beauty & Skin Care Center</h1>
-                    <p class="pl-4 border-left border-primary">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd erat duo eos et erat</p>
+                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">Sobre</h6>
+                    <h1 class="mb-4">Relaxe, Revitalize e Recupere com as terapias manuais</h1>
+                    <p class="pl-4 border-left border-primary">Oferecemos uma variedade de técnicas terapêuticas personalizadas para aliviar o estresse, reduzir a tensão muscular e promover uma sensação de tranquilidade profunda. Nossos tratamentos revitalizantes estimulam a circulação, aumentam a flexibilidade e reenergizam seu corpo e mente. Se você está se recuperando de lesões ou buscando alívio para dores crônicas, estou aqui para ajudar.</p>
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
-                                <h3 class="display-4 text-primary" data-toggle="counter-up">99</h3>
-                                <h6 class="text-uppercase">Spa Specialist</h6>
+                                <h3 class="display-4 text-primary" data-toggle="counter-up">2</h3>
+                                <h6 class="text-uppercase">Polos</h6>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
-                                <h3 class="display-4 text-primary" data-toggle="counter-up">999</h3>
-                                <h6 class="text-uppercase">Happy Clients</h6>
+                                <h3 class="display-4 text-primary" data-toggle="counter-up">5</h3>
+                                <h6 class="text-uppercase">Clientes Felizes</h6>
                             </div>
                         </div>
                     </div>
@@ -179,16 +179,16 @@
     <div class="container-fluid px-0 py-5 my-5">
         <div class="row mx-0 justify-content-center text-center">
             <div class="col-lg-6">
-                <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Our Service</h6>
-                <h1>Spa & Beauty Services</h1>
+                <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Equipamentos dos polos</h6>
+                <h1>Instituto fisiologic</h1>
             </div>
         </div>
         <div class="owl-carousel service-carousel">
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-1.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Body Massage</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Pistola de massagem</h4>
+                    <p class="text-white px-3 mb-3">Alívio muscular, redução de tensão, melhora da circulação sanguínea, recuperação mais rápida e relaxamento profundo com a pistola de massagem.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -197,8 +197,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-2.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Stone Therapy</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
+                    <p class="text-white px-3 mb-3">Melhora da circulação, alívio de dores musculares, redução da inflamação, relaxamento profundo e promoção da saúde geral com as ventosas.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -207,8 +207,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-3.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Facial Therapy</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Terapia combinada</h4>
+                    <p class="text-white px-3 mb-3">Melhora da cicatrização de tecidos, alívio da dor, redução da inflamação, aumento da circulação e recuperação otimizada com a terapia combinada de ultrassom e corrente interferencial.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -217,8 +217,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-4.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Skin Care</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Bota Pneumática</h4>
+                    <p class="text-white px-3 mb-3">Recuperação acelerada, redução do inchaço, melhora da circulação e alívio da dor com o uso da bota pneumática.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -227,8 +227,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-5.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Stream Bath</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Ambiente climatizado</h4>
+                    <p class="text-white px-3 mb-3">Conforto máximo durante o tratamento, relaxamento agradável, regulação da temperatura ideal e ambiente climatizado para uma experiência de massoterapia inigualável.</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -237,8 +237,8 @@
             <div class="service-item position-relative">
                 <img class="img-fluid" src="img/service-6.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Face Masking</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">TENS</h4>
+                    <p class="text-white px-3 mb-3">Alívio da dor, relaxamento muscular, redução de tensões, promoção da circulação sanguínea e alívio do estresse com a terapia de Estimulação Nervosa Elétrica Transcutânea (TENS)</p>
                     <div class="w-100 bg-white text-center p-4" >
                         <a class="btn btn-primary" href="">Make Order</a>
                     </div>
@@ -540,7 +540,7 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-5">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mb-3 text-white"><span class="text-primary">SPA</span> Center</h1>
+                        <h1 class="mb-3 text-white"><span class="text-primary">Will</span> Fisio</h1>
                     </a>
                     <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
                     <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
