--- a/index.html
+++ b/index.html
@@ -344,36 +344,36 @@
                             <div class="bg-white">
                                 <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
                                     <h1 class="display-4 mb-0">
-                                        <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">$</small>49<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                        <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">R$</small>90<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">,00</small>
                                     </h1>
-                                    <h5 class="text-primary text-uppercase m-0">Basic Plan</h5>
+                                    <h5 class="text-primary text-uppercase m-0">Terapia escolhida</h5>
                                 </div>
                                 <div class="p-4">
-                                    <p><i class="fa fa-check text-success mr-2"></i>Full Body Massage</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Deep Tissue Massage</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Hot Stone Massage</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Massage Sueca(Clássica)</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Massagem Relaxante</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Drenagem linfática</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Tissue Body Polish</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Foot & Nail Care</p>
-                                    <a href="" class="btn btn-primary my-2">Order Now</a>
+                                    <a href="" class="btn btn-primary my-2">Agende agora</a>
                                 </div>
                             </div>
                             <div class="bg-white">
                                 <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
                                     <h1 class="display-4 mb-0">
-                                        <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">$</small>99<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">/Mo</small>
+                                        <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">R$</small>100<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">,00</small>
                                     </h1>
-                                    <h5 class="text-primary text-uppercase m-0">Family Plan</h5>
+                                    <h5 class="text-primary text-uppercase m-0">Terapia individualizada</h5>
                                 </div>
                                 <div class="p-4">
-                                    <p><i class="fa fa-check text-success mr-2"></i>Full Body Massage</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Deep Tissue Massage</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Hot Stone Massage</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Tissue Body Polish</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Foot & Nail Care</p>
-                                    <a href="" class="btn btn-primary my-2">Order Now</a>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Formulada pelo terapeuta</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Foco na sua necessidade</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Mix de técnicas</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Utilização de equipamentos</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Atendimento adaptado</p>
+                                    <a href="" class="btn btn-primary my-2">Agende agora</a>
                                 </div>
                             </div>
-                            <div class="bg-white">
+                            <!-- <div class="bg-white">
                                 <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
                                     <h1 class="display-4 mb-0">
                                         <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">$</small>149<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">/Mo</small>
@@ -386,9 +386,9 @@
                                     <p><i class="fa fa-check text-success mr-2"></i>Hot Stone Massage</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Tissue Body Polish</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Foot & Nail Care</p>
-                                    <a href="" class="btn btn-primary my-2">Order Now</a>
-                                </div>
-                            </div>
+                                    <a href="" class="btn btn-primary my-2">Agende agora</a>
+                                </div> 
+                            </div> -->
                         </div>
                     </div>
                 </div>
