--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="" class="btn btn-primary d-none d-lg-block">Book Now</a>
+                <a href="" class="btn btn-primary d-none d-lg-block">Agendar</a>
             </div>
         </nav>
     </div>
@@ -111,7 +111,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massagem Sueca (Clássica)</h3>
                             <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Massage Relaxante</h3>
                             <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Massoterapia & Bem-estar</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Drenagem Linfática</h3>
                             <p class="mx-md-5 px-5">Lorem rebum magna dolore amet lorem eirmod magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum labore diam</p>
-                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Make Appointment</a>
+                            <a class="btn btn-outline-light py-3 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Agendar</a>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
                                 <h3 class="display-4 text-primary" data-toggle="counter-up">2</h3>
-                                <h6 class="text-uppercase">Polos</h6>
+                                <h6 class="text-uppercase">Unidades</h6>
                             </div>
                         </div>
                         <div class="col-6">
@@ -179,7 +179,7 @@
     <div class="container-fluid px-0 py-5 my-5">
         <div class="row mx-0 justify-content-center text-center">
             <div class="col-lg-6">
-                <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Equipamentos dos polos</h6>
+                <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Equipamentos dos Unidades</h6>
                 <h1>Instituto fisiologic</h1>
             </div>
         </div>
@@ -190,7 +190,7 @@
                     <h4 class="text-white font-weight-medium px-3">Pistola de massagem</h4>
                     <p class="text-white px-3 mb-3">Alívio muscular, redução de tensão, melhora da circulação sanguínea, recuperação mais rápida e relaxamento profundo com a pistola de massagem.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                     <h4 class="text-white font-weight-medium px-3">Ventosas</h4>
                     <p class="text-white px-3 mb-3">Melhora da circulação, alívio de dores musculares, redução da inflamação, relaxamento profundo e promoção da saúde geral com as ventosas.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                     <h4 class="text-white font-weight-medium px-3">Terapia combinada</h4>
                     <p class="text-white px-3 mb-3">Melhora da cicatrização de tecidos, alívio da dor, redução da inflamação, aumento da circulação e recuperação otimizada com a terapia combinada de ultrassom e corrente interferencial.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                     <h4 class="text-white font-weight-medium px-3">Bota Pneumática</h4>
                     <p class="text-white px-3 mb-3">Recuperação acelerada, redução do inchaço, melhora da circulação e alívio da dor com o uso da bota pneumática.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                     <h4 class="text-white font-weight-medium px-3">Ambiente climatizado</h4>
                     <p class="text-white px-3 mb-3">Conforto máximo durante o tratamento, relaxamento agradável, regulação da temperatura ideal e ambiente climatizado para uma experiência de massoterapia inigualável.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -240,7 +240,7 @@
                     <h4 class="text-white font-weight-medium px-3">TENS</h4>
                     <p class="text-white px-3 mb-3">Alívio da dor, relaxamento muscular, redução de tensões, promoção da circulação sanguínea e alívio do estresse com a terapia de Estimulação Nervosa Elétrica Transcutânea (TENS)</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -248,7 +248,7 @@
         <div class="row justify-content-center bg-appointment mx-0">
             <div class="col-lg-6 py-5">
                 <div class="p-5 my-5" style="background: rgba(33, 30, 28, 0.7);">
-                    <h1 class="text-white text-center mb-4">Make Appointment</h1>
+                    <h1 class="text-white text-center mb-4">Agendar</h1>
                     <form>
                         <div class="form-row">
                             <div class="col-sm-6">
@@ -290,7 +290,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-6">
-                                <button class="btn btn-primary btn-block" type="submit" style="height: 47px;">Make Appointment</button>
+                                <button class="btn btn-primary btn-block" type="submit" style="height: 47px;">Agendar</button>
                             </div>
                         </div>
                     </form>
@@ -320,7 +320,7 @@
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Saturday : 9:00 AM - 6:00 PM</li>
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Sunday : Closed</li>
                         </ul>
-                        <a href="" class="btn btn-primary mt-2">Book Now</a>
+                        <a href="" class="btn btn-primary mt-2">Agendar</a>
                     </div>
                 </div>
             </div>
@@ -354,7 +354,7 @@
                                     <p><i class="fa fa-check text-success mr-2"></i>Drenagem linfática</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Tissue Body Polish</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Foot & Nail Care</p>
-                                    <a href="" class="btn btn-primary my-2">Agende agora</a>
+                                    <a href="" class="btn btn-primary my-2">Agendar</a>
                                 </div>
                             </div>
                             <div class="bg-white">
@@ -370,7 +370,7 @@
                                     <p><i class="fa fa-check text-success mr-2"></i>Mix de técnicas</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Utilização de equipamentos</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Atendimento adaptado</p>
-                                    <a href="" class="btn btn-primary my-2">Agende agora</a>
+                                    <a href="" class="btn btn-primary my-2">Agendar</a>
                                 </div>
                             </div>
                             <!-- <div class="bg-white">
@@ -386,7 +386,7 @@
                                     <p><i class="fa fa-check text-success mr-2"></i>Hot Stone Massage</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Tissue Body Polish</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Foot & Nail Care</p>
-                                    <a href="" class="btn btn-primary my-2">Agende agora</a>
+                                    <a href="" class="btn btn-primary my-2">Agendar</a>
                                 </div> 
                             </div> -->
                         </div>
