--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <div class="container-fluid px-0 py-5 my-5">
         <div class="row mx-0 justify-content-center text-center">
             <div class="col-lg-6">
-                <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Equipamentos dos Unidades</h6>
+                <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Equipamentos das Unidades</h6>
                 <h1>Instituto fisiologic</h1>
             </div>
         </div>
@@ -312,13 +312,18 @@
                 </div>
                 <div class="col-lg-6 pt-5 pb-lg-5">
                     <div class="hours-text bg-light p-4 p-lg-5 my-lg-5">
-                        <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Open Hours</h6>
-                        <h1 class="mb-4">Best Relax And Spa Zone</h1>
-                        <p>Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo</p>
+                        <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Horário de funcionamento</h6>
+                        <h1 class="mb-4">Venha relaxar e aliviar as dores, estamos abertos para atendê-lo com cuidado e dedicação, de: </h1>
+                        <p>Nossos atendimento</p>
+                        <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Instituto Fisiologic</h6>
                         <ul class="list-inline">
-                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Mon – Fri : 9:00 AM - 7:00 PM</li>
-                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Saturday : 9:00 AM - 6:00 PM</li>
-                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Sunday : Closed</li>
+                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Seg – Sexta: 07:00 - 12:00</li>
+                        </ul>
+                         <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Espaço Hayanna</h6>
+                        <ul class="list-inline">
+                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Seg – Sexta: 19:00 - 22:00</li>
+                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Sabado: 07:00 - 22:00</li>
+                            <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Domingo: 09:00 - 18:00</li>
                         </ul>
                         <a href="" class="btn btn-primary mt-2">Agendar</a>
                     </div>
@@ -367,7 +372,7 @@
                                 <div class="p-4">
                                     <p><i class="fa fa-check text-success mr-2"></i>Formulada pelo terapeuta</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Foco na sua necessidade</p>
-                                    <p><i class="fa fa-check text-success mr-2"></i>Mix de técnicas</p>
+                                    <p><i class="fa fa-check text-success mr-2"></i>Mix de técnicas e breathwork</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Utilização de equipamentos</p>
                                     <p><i class="fa fa-check text-success mr-2"></i>Atendimento adaptado</p>
                                     <a href="" class="btn btn-primary my-2">Agendar</a>
