--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                 <div class="col-lg-6 pt-5 pb-lg-5">
                     <div class="hours-text bg-light p-4 p-lg-5 my-lg-5">
                         <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Horário de funcionamento</h6>
-                        <h1 class="mb-4">Venha relaxar e aliviar as dores, estamos abertos para atendê-lo com cuidado e dedicação, de: </h1>
-                        <p>Nossos atendimento</p>
+                        <h1 class="mb-4">Venha relaxar e aliviar as dores </h1>
+                        <p>Estamos abertos para atendê-lo com cuidado e dedicação, de:</p>
                         <h6 class="d-inline-block text-white text-uppercase bg-primary py-1 px-2">Unidade - Instituto Fisiologic</h6>
                         <ul class="list-inline">
                             <li class="h6 py-1"><i class="far fa-circle text-primary mr-3"></i>Seg – Sexta: 07:00 - 12:00</li>
