--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         <div class="owl-carousel pricing-carousel">
                             <div class="bg-white">
                                 <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
-                                    <h5 class="text-primary text-uppercase m-0">Terapia escolhida</h5>
+                                    <h5 class="text-primary text-uppercase m-0">Terapia <br>escolhida</h5>
                                     <h1 class="display-4 mb-0">
                                         <small class="align-top text-muted font-weight-medium" style="font-size: 22px; line-height: 45px;">R$</small>90<small class="align-bottom text-muted font-weight-medium" style="font-size: 16px; line-height: 40px;">,00</small>
                                     </h1>
