--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 </div>
                 <div class="col-lg-7 pt-5 pb-lg-5">
                     <div class="pricing-text bg-light p-4 p-lg-5 my-lg-5">
-                        <div class="owl-carousel pricing-carousel">
+                        <div class="owl-carousel testimonial-carousel pricing-carousel">
                             <div class="bg-white">
                                 <div class="d-flex align-items-center justify-content-between border-bottom border-primary p-4">
                                     <h5 class="text-primary text-uppercase m-0">Terapia de<br>liberação</h5>
